Add styling and readMe

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div id="bookList"></div>
+  <div class="book-container" id="bookList"></div>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             fetch('books.xml')
